--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,6 @@ services:
       - ./src:/app/src
       - ./node_modules:/app/node_modules
     env_file:
-      - .env
+      - .env.dev
     environment:
       - REACT_APP_API_URL=localhost:3000
